Bug 198289 - URLs of links are not displayed in the statusbar of the message viewer window.
Summary: URLs of links are not displayed in the statusbar of the message viewer window.
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: messageviewer (other bugs)
Version First Reported In: 1.11.4
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-29 14:39 UTC by Diederik van der Boor
Modified: 2009-08-09 21:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Diederik van der Boor 2009-06-29 14:39:31 UTC
Version:           1.11.4 (using 4.2.4 (KDE 4.2.4) "release 2", KDE:42 / openSUSE_11.0)
Compiler:          gcc
OS:                Linux (i686) release 2.6.25.20-0.4-default

In the embedded message preview area, hovering a link displays the URL of that link in the status bar.

In the message view window (double clicking on an email in the list) the status bar does not display the URL when hovering over a link. I think this is important to have, to have a reasonable chance of detecting phishing links.
Comment 1 Martin Koller 2009-08-09 21:42:52 UTC
SVN commit 1009350 by mkoller:

BUG: 198289

Show hovered URL in reader window status bar.


 M  +7 -1      kmreadermainwin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1009350