BUG: 198289

Show hovered URL in reader window status bar.

svn path=/trunk/KDE/kdepim/; revision=1009350